faltando um "i", alterado o PPA do ZoneMinder de: ppa:iconnor/zoneminder-master para: ppa:iconnor/zoneminder-proposed,
corrigido as falhas de variáveis no script: 19-zoneminder.sh, alteração do caminho de criação da Base de Dados do
Zabbix para: usr/share/doc/zabbix-sql-scripts/mysql/server.sql.gz, alteração do caminho para o envio do inventário do
FusionInventory para o servidor de GLPI 9.x para: https://glpi9.pti.intra/plugins/fusioninventory/.

21/08/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh com o novo caminho da imagem do Memtest86,
criação das variáveis: MEMTEST86V9 e MEMTEST86V4 para suportar as novas versões do Memtest86 mantida pela empresa que
adquiriu o Memtest86 PassMark. Alteração do arquivo de configuração: dhcpd.conf com a linha para mudar o escopo padrão
para configurar o DNS Server apontando para o servidor Ubuntu Server. Alteração do arquivo de configuração do serviço
do VSFTPd: vsftpd.allowed_users alterado os usuários do GLPI9 e GLPI10. Criação do script: 17-B-glpi-10.sh, alteração 
do nome do script: 18-A-fusioninventory-9.sh pois foi lançado o suporte para o GLPI 10. Correção do caminho do script
da criação da Base de Dados do Zabbix, caminho estava correto só no nome que alterou para: server.sql.gz.

20/08/2022 - Robson Vaamonde - Criação do arquivo de configuração: grafana.ini, alteração do script: 21-grafana.sh com
suporte para copiar o arquivo de configuração customizado do grafana.ini e editar o arquivo. Preparativos para a criação
do script de geração do certificado TLS/SSL do Grafana.

10/08/2022 - Robson Vaamonde - Atualização de vários arquivos no repositório com foco em documentação e correções de
escrita dos scripts, melhoria no cabeçalho e versões de software.

09/08/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos software: FusionInventory 9.5.4.2,
Docker Compose 2.9.0, Rundeck 4.4.0, Nextcloud 24.0.3, Asterisk 19, Zabbix 6.2, OpenFire 4.7.3, OCS Invetory 2.10.