@@ -1,0 +1,91 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 14/09/2022
+# Data de atualização: 14/09/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do GLPI Help Desk v10.0.x
+# Testado e homologado para a versão do  GLPI Help Desk Agent v1.4.x
+#
+# Endereço do Servidor do GLPI Help Desk v10.0.x
+# OBSERVAÇÃO IMPORTANTE: no servidor Ubuntu Server utilizar o endereço
+# de Loopback (localhost), no agentes remotos mudar para o endereço de
+# rede: 172.16.1.20 ou CNAME: glpi10.pti.intra
+# Se você utilizar o Marketplace do GLPI utulizar o novo caminho para o
+# envio do inventário: https://my-glpi-server/marketplace/glpiinventory/
+# ou https://my-glpi-server/plugins/glpiinventory/
+server = https://glpi10.pti.intra/front/inventory.php
+#
+# Diretório temporário utilizado pelo GLPI Help Desk v10.0.x para o inventário
+local = /tmp
+#
+# Atraso máximo antes do primeiro inventário, configuração em segundos
+delaytime = 3600
+#
+# Não entre em contato com o servidor antes da próxima hora agendada
+lazy = 0
+#
+# Permitir a verificação de diretórios domésticos de usuários
+scan-homedirs = 0
+#
+# Permitir a verificação de perfis de usuários
+scan-profiles = 0
+#
+# Salvar inventário como HTML
+html = 0
+#
+# Tempo limite para a execução dos módulos do GLPI Help Desk v10.0.x
+backend-collect-timeout = 180
+#
+# Sempre enviar dados do inventário para o servidor do GLPI Help Desk v10.0.x
+force = 0
+#
+# Não use peer-to-peer para baixar arquivos
+no-p2p = 0
+#
+# Diretório dos Certificado CA do Agent do GLPI Help Desk v10.0.x
+ca-cert-dir = 
+#
+# Arquivo de Certificado CA do Agent do GLPI Help Desk v10.0.x
+ca-cert-file = 
+#
+# Não verifique o certificado SSL do servidor de GLPI Help Desk v10.0.x
+no-ssl-check = 0
+#
+# Tempo máximo de conexão com o servidor de GLPI Help Desk v10.0.x
+timeout = 180
+#
+# Desativar o servidor web incorporado do Agent do GLPI Help Desk v10.0.x
+no-httpd = 0
+#
+# Interface de rede para ouvir
+httpd-ip =
+#
+# Configuração da Porta de comunicação do GLPI Help Desk v10.0.x
+httpd-port = 62354
+#
+# Configuração da sada de erro
+logger = stderr
+#
+# Arquivo de Log do inventário do Agent do GLPI Help Desk v10.0.x
+logfile = /var/log/glpi10/glpi10.log
+#
+# Tamanho máximo do Log em MB
+logfile-maxsize = 5
+#
+# Utilizar o Syslog
+logfacility = LOG_USER
+#
+# Usar o console colorido do Agent do GLPI Help Desk v10.0.x
+color = 1
+#
+# Adicionar a TAG para o resultado do inventário no GLPI Help Desk v10.0.x
+tag = ServerLinux
+#
+# Modo de Debug
+debug = 0
